# TestTask

./: .gitingore  CMakeLists.txt  README.md
config/: config.cfg
idl/: speaker.idl
src/: clt.cc  impl.cc
